-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Catalog and Routing
-
Fully Compatible
-
ALL
-
CAR Team 2024-03-04, CAR Team 2024-03-18
-
123
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The current implementation of the failpoint performs two consecutive calls to the catalog: one to get the unsplittable collections and another to get the chunks. Another thread may remove the collection between the calls, and then the policy does not find the associated chunk