SERVER-87057: Random migration failpoint in move_unsharded_policy retries selection if collection is dropped during the selection process (#19292)

GitOrigin-RevId: 40221a628f96d96ab31c38ef80ae7afdac0419a1